k8s/service/svc1.yaml
apiVersion: v1
kind: Service
metadata:
  name:  nginx-svc
spec:
  selector:
    app:  nginx
  ports:
  - port:  80
    targetPort:  8080
    nodePort: 31000
type: NodePort
